--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,10 @@
   box-sizing: border-box;
 }
 
-
-
 body {
   position: relative;
-  background-image:  url("./images/spiral-305142.svg"), linear-gradient(rgb(0, 0, 0), rgb(29, 19, 19));
-  background-size: 4rem;
+  background-image:  url("./images/spiral-305142.svg"), linear-gradient(rgb(0, 0, 0) 40%, rgb(26, 2, 2));
+  background-size: 6rem;
   z-index: 1;
   text-shadow: 1px 1px 5px #313131 ;
 }
@@ -22,7 +20,8 @@ main {
   margin: 0 auto;
   z-index: 2;
   padding: 3rem 0;
-  height: 90%;
+  /* height: 90%; */
+  text-shadow: 2px 2px 10px #000 ;
 }
 
 p,
@@ -46,8 +45,7 @@ li {
   display: block;
   width: 50%;
   height: auto;
-  border: #1c1819 ridge 0.4rem;
-  box-shadow: 0px 0px 5px 3px #F3EFE0;
+  border: #000 solid 2px;
   margin-left: auto;
   margin-right: auto;
 }
